KsheerabdhiOrgSetup/manifest/SimbaUniversity/force-app/main/default/objects/Customer_Media__c/Customer_Media__c.object-meta.xml
<CustomObject>
    <label>Customer Media</label>
    <nameField>
        <displayFormat>CMid-{000}</displayFormat>
        <label>Customer Media ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Customer Media</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>