KsheerabdhiOrgSetup/manifest/SimbaUniversity/force-app/main/default/objects/Customer_Media__c/fields/Date_of_return__c.field-meta.xml
<CustomField>
    <fullName>Date_of_return__c</fullName>
    <formula>Date_of_issue__c +10</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Date of return</label>
    <type>Date</type>
</CustomField>