KsheerabdhiOrgSetup/manifest/SimbaUniversity/force-app/main/default/objects/Customer_Media__c/fields/Media_id__c.field-meta.xml
<CustomField>
    <fullName>Media_id__c</fullName>
    <label>Media id</label>
    <referenceTo>Media__c</referenceTo>
    <relationshipLabel>Customer Media</relationshipLabel>
    <relationshipName>Customer_Media</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>