KsheerabdhiOrgSetup/manifest/SimbaUniversity/force-app/main/default/objects/Customer_Media__c/fields/Smart_Library_Customer_id__c.field-meta.xml
<CustomField>
    <fullName>Smart_Library_Customer_id__c</fullName>
    <label>Smart Library Customer id</label>
    <referenceTo>Smart_Library_Customer__c</referenceTo>
    <relationshipLabel>Customer Media</relationshipLabel>
    <relationshipName>Customer_Media</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>