KsheerabdhiOrgSetup/manifest/SimbaUniversity/force-app/main/default/objects/Customer_Media__c/fields/Submitted_before_return_date__c.field-meta.xml
<CustomField>
    <fullName>Submitted_before_return_date__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Submitted before return date</label>
    <type>Checkbox</type>
</CustomField>