KsheerabdhiOrgSetup/manifest/SimbaUniversity/force-app/main/default/objects/Customer_Media__c/validationRules/Date_of_issue_should_be_today.validationRule-meta.xml
<ValidationRule>
    <fullName>Date_of_issue_should_be_today</fullName>
    <active>true</active>
    <errorConditionFormula>Date_of_issue__c &lt;&gt;  TODAY()</errorConditionFormula>
    <errorDisplayField>Date_of_issue__c</errorDisplayField>
    <errorMessage>Date of issue should be today</errorMessage>
</ValidationRule>